2011-04-20  Ethan A Merritt  <merritt@u.washington.edu>

	* src/gplt_x11.c:  Most of the messages passed via the title bar
	of the X Display window are controlled by #ifdef TITLE_BAR_DRAWING_MSG.
	Do the same for the "allocating colors..." message.

2011-04-19  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.c (f_columnhead df_set_key_title) src/datafile.h
	src/eval.c src/plot2d.c (eval_plots) docs/gnuplot.doc:

	New function columnhead(N) that returns a string containing column N
	from the first line of a data set. 'plot ... title columnhead(i)'
	was previously implemented as a keyword; making it a function instead
	allows, for example, 
	'plot for [i=3:6] ... title "Results of ".columnhead(i)'

2011-03-28  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot2d.c (get_data):  Fix array bounds underflow if every
	point in a data file is invalid.
	Bug #3254653

2011-03-25  Ethan A Merritt  <merritt@u.washington.edu>

	* src/pm3d.c docs/gnuplot.doc:  Allow pm3d plots to use the fourth
	column of data as "rgb variable" rather than "palette z".

2011-03-21  Ethan A Merritt  <merritt@u.washington.edu>

	* term/svg.trm: Demarcate plot elements using the svg <title> and
	<g id=foo> elements rather than <a xlink:foo>
	Bug #3205257

2011-03-17  Ethan A Merritt  <merritt@u.washington.edu>

	* axis.c(gen_tics): Make sure the axis tic label format string is
	long enough to hold enhanced text markup.  Fixes buffer overflow.

2011-03-14  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c: Auto-placement of the left margin of the plot
	was failing to allow room for "set key outside left".

2011-03-10  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot2d.c(get_data) src/graphics.c(plot_boxes):
	variable color for plot style BOXXYERROR

2011-03-01  Ethan A Merritt  <merritt@u.washington.edu>

	* PATCHLEVEL:	
	Tag for release of version 4.4.3

2011-02-20  Ethan A Merritt  <merritt@u.washington.edu>
