@@ -1,5 +1,5 @@
 #ifndef lint
-static char *RCSid() { return RCSid("$Id: misc.c,v 1.108.2.6 2010/10/28 00:20:30 sfeam Exp $"); }
+static char *RCSid() { return RCSid("$Id: misc.c,v 1.108.2.7 2011/04/25 17:08:31 sfeam Exp $"); }
 #endif
 
 /* GNUPLOT - misc.c */
@@ -153,7 +153,7 @@ load_file(FILE *fp, char *name, TBOOLEAN can_do_args)
     do_load_arg_substitution = can_do_args;
 
     if (fp == (FILE *) NULL) {
-	os_error(c_token, "Cannot open %s file '%s'",
+	os_error(NO_CARET, "Cannot open %s file '%s'",
 		 can_do_args ? "call" : "load", name);
     } else if (fp == stdin) {
 	/* DBT 10-6-98  go interactive if "-" named as load file */
